# Locus

./: .gitignore  README.md  pytest.ini
.github/workflows/: ci.yml  desktop-build.yml
backend/: .bandit.yaml  api_contract.md  mypy.ini  requirements.txt  service_entry.py  test_db.py
backend/app/: event_stream.py  main.py  monitor.py  snapshot_service.py  storage.py
backend/app/database/: crud.py  models.py
backend/tests/: conftest.py  test_api.py  test_auth_hardening.py  test_backup_queue.py  test_checkpoints.py  test_db.py  test_event_stream.py  test_monitor.py  test_restore_endpoint.py  test_restore_validation.py  test_security_settings.py  test_snapshot.py  test_storage.py  test_telemetry.py  test_versions.py
scripts/services/: install-linux-user-service.sh  install-windows-service.ps1  uninstall-linux-user-service.sh  uninstall-windows-service.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tools/window-probe/: Cargo.toml
tools/window-probe/src/: main.rs
ui/: index.html  package-lock.json  package.json  svelte.config.js
ui/src/: App.svelte  api.js  dialogStore.js  errorStore.js  global.css  main.js
ui/src/lib/: ActivityTimeline.svelte  CheckpointSessionsPage.svelte  CustomDialog.svelte  FileHistoryModal.svelte  LockScreen.svelte  SettingsPage.svelte  SnapshotHistoryPage.svelte  Titlebar.svelte  WatchedFolders.svelte
ui/src/styles/: layout.css  utils.css  variables.css
ui/src/styles/components/: activity.css  cards.css  consistency.css  modals.css  settings.css
ui/tests/: api-base-url.test.mjs
