[package]
name = "locus_tauri"
version = "1.5.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "=1.5.6", features = [] }

[dependencies]
tauri = { version = "=1.8.3", features = [ "os-all", "system-tray", "window-close", "window-unmaximize", "window-show", "window-start-dragging", "window-maximize", "window-hide", "window-minimize", "dialog-message", "dialog-ask", "dialog-confirm", "shell-open", "dialog-open"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
